--- a/_sources/06_Cahn_Hilliard/CH02d_axi_ellipse_lithiation_delithiation_slow_ramp.ipynb
+++ b/_sources/06_Cahn_Hilliard/CH02d_axi_ellipse_lithiation_delithiation_slow_ramp.ipynb
@@ -63,11 +63,12 @@
     "### Software:\n",
     "- Dolfinx v0.8.0\n",
     "\n",
-    "Eric Stewart and Lallit Anand  \n",
     "\n",
-    "ericstew@mit.edu and anand@mit.edu   \n",
+    "In the collection \"Example Codes for Coupled Theories in Solid Mechanics,\"\n",
     "\n",
-    "June 2024"
+    "By Eric M. Stewart, Shawn A. Chester, and Lallit Anand.\n",
+    "\n",
+    "https://solidmechanicscoupledtheories.github.io/"
    ]
   },
   {
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 1,
    "id": "6d33ad4a-f75b-449a-9445-1b8358927868",
    "metadata": {},
    "outputs": [],
@@ -146,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 2,
    "id": "fd25aeb7-780b-41c3-917c-0c174798cbc3",
    "metadata": {},
    "outputs": [],
@@ -183,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 3,
    "id": "de0591d4",
    "metadata": {},
    "outputs": [
@@ -215,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 4,
    "id": "41cd7d67",
    "metadata": {},
    "outputs": [
@@ -253,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 5,
    "id": "3dd2f65f",
    "metadata": {},
    "outputs": [
@@ -264,7 +265,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 6,
    "id": "950959cb-7f79-4e8f-9110-15bfcabbea5f",
    "metadata": {},
    "outputs": [],
@@ -344,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 7,
    "id": "b0168fe9",
    "metadata": {},
    "outputs": [],
@@ -376,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 8,
    "id": "ad1649d8-d9d7-47e9-9840-675138f04b84",
    "metadata": {},
    "outputs": [],
@@ -417,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 9,
    "id": "60843083-0ccf-46ae-b60f-1011292e966d",
    "metadata": {},
    "outputs": [],
@@ -454,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 10,
    "id": "3b5b68bc",
    "metadata": {},
    "outputs": [],
@@ -481,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 11,
    "id": "2dc0ef23",
    "metadata": {},
    "outputs": [],
@@ -671,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 12,
    "id": "e303f0b7-9e4a-4f83-a219-67643c1978a8",
    "metadata": {},
    "outputs": [],
@@ -703,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 13,
    "id": "aa2c7bf8-6b63-49b7-b0aa-116ea9d25804",
    "metadata": {},
    "outputs": [],
@@ -764,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 14,
    "id": "2d239f60",
    "metadata": {},
    "outputs": [],
@@ -788,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 15,
    "id": "1410325d",
    "metadata": {},
    "outputs": [],
@@ -923,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 16,
    "id": "59a0ba13",
    "metadata": {},
    "outputs": [],
@@ -959,7 +960,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 17,
    "id": "9c8a948f-2cc2-491b-8453-16112c15aa02",
    "metadata": {},
    "outputs": [],
@@ -978,7 +979,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 18,
    "id": "6eae301e-9bb1-4531-9de4-f5571959e734",
    "metadata": {},
    "outputs": [],
@@ -1018,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 19,
    "id": "329d9f03-2c14-42de-b416-be427e18ffce",
    "metadata": {},
    "outputs": [],
@@ -1056,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 20,
    "id": "d60ce60b",
    "metadata": {},
    "outputs": [],
@@ -1087,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 21,
    "id": "762e7f58-0273-4882-a95f-b485a54013e7",
    "metadata": {},
    "outputs": [
@@ -1245,7 +1246,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-06-23 14:40:48.593 (49548.388s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n"
+      "2025-02-11 16:15:55.307 (  18.572s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n"
      ]
     },
     {
@@ -1261,8 +1262,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-06-23 14:40:50.441 (49550.236s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n",
-      "2024-06-23 14:40:52.693 (49552.489s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n"
+      "2025-02-11 16:15:56.587 (  19.851s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n",
+      "2025-02-11 16:15:58.285 (  21.549s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n"
      ]
     },
     {
@@ -1278,7 +1279,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-06-23 14:40:56.505 (49556.301s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n"
+      "2025-02-11 16:16:01.142 (  24.407s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n"
      ]
     },
     {
@@ -1297,8 +1298,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-06-23 14:40:58.721 (49558.516s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n",
-      "2024-06-23 14:41:00.367 (49560.162s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n"
+      "2025-02-11 16:16:02.748 (  26.012s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n",
+      "2025-02-11 16:16:03.906 (  27.170s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n"
      ]
     },
     {
@@ -1314,7 +1315,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-06-23 14:41:02.499 (49562.295s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n"
+      "2025-02-11 16:16:05.474 (  28.739s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n"
      ]
     },
     {
@@ -1330,7 +1331,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-06-23 14:41:04.351 (49564.146s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n"
+      "2025-02-11 16:16:06.804 (  30.068s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n"
      ]
     },
     {
@@ -1346,7 +1347,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-06-23 14:41:06.155 (49565.950s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n"
+      "2025-02-11 16:16:08.133 (  31.398s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n"
      ]
     },
     {
@@ -1362,7 +1363,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-06-23 14:41:07.835 (49567.630s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n"
+      "2025-02-11 16:16:09.362 (  32.626s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n"
      ]
     },
     {
@@ -1381,7 +1382,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-06-23 14:41:09.931 (49569.726s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n"
+      "2025-02-11 16:16:10.914 (  34.179s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n"
      ]
     },
     {
@@ -1916,8 +1917,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-06-23 14:42:12.604 (49632.399s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n",
-      "2024-06-23 14:42:13.932 (49633.727s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n"
+      "2025-02-11 16:16:59.564 (  82.829s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n",
+      "2025-02-11 16:17:00.528 (  83.793s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n"
      ]
     },
     {
@@ -1933,8 +1934,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-06-23 14:42:15.704 (49635.499s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n",
-      "2024-06-23 14:42:17.523 (49637.318s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n"
+      "2025-02-11 16:17:01.827 (  85.091s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n",
+      "2025-02-11 16:17:03.171 (  86.436s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n"
      ]
     },
     {
@@ -1950,8 +1951,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-06-23 14:42:19.289 (49639.084s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n",
-      "2024-06-23 14:42:21.375 (49641.171s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n"
+      "2025-02-11 16:17:04.478 (  87.743s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n",
+      "2025-02-11 16:17:06.003 (  89.267s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n"
      ]
     },
     {
@@ -1970,7 +1971,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-06-23 14:42:23.606 (49643.401s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n"
+      "2025-02-11 16:17:07.664 (  90.929s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n"
      ]
     },
     {
@@ -1986,7 +1987,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-06-23 14:42:25.303 (49645.099s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n"
+      "2025-02-11 16:17:08.916 (  92.180s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n"
      ]
     },
     {
@@ -2272,7 +2273,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-06-23 14:43:01.359 (49681.155s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n"
+      "2025-02-11 16:17:36.735 ( 120.000s) [main            ]       NewtonSolver.cpp:270   WARN| Newton solver did not converge.\n"
      ]
     },
     {
@@ -2396,7 +2397,7 @@
       "-----------------------------------------\n",
       "End computation\n",
       "------------------------------------------\n",
-      "Elapsed real time:  0:02:41.282291\n",
+      "Elapsed real time:  0:02:02.855901\n",
       "------------------------------------------\n"
      ]
     }
@@ -2517,7 +2518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 22,
    "id": "0b7c630c",
    "metadata": {},
    "outputs": [
@@ -2564,7 +2565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 23,
    "id": "7d6b8aa4",
    "metadata": {},
    "outputs": [],
@@ -2601,7 +2602,7 @@
    "formats": "ipynb,py:light"
   },
   "kernelspec": {
-   "display_name": "fenicsx-env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
