small changes to units 1, 2, 6

--- a/_sources/02_finite_viscoelasticity/FV05_VHB_stretch_hold.ipynb
+++ b/_sources/02_finite_viscoelasticity/FV05_VHB_stretch_hold.ipynb
@@ -2347,7 +2347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "b974c77a-3b53-4c3f-a546-06d272d84be1",
    "metadata": {
     "lines_to_next_cell": 0
@@ -2376,8 +2376,12 @@
     "# Only plot as far as we have time history data\n",
     "ind = np.argmax(timeHist0) +1\n",
     "\n",
+    "# Here, we import data which was saved from a separate simulation of the \n",
+    "# \"equilibrium\" (quasi-static) stress-stretch behavior. \n",
+    "#\n",
+    "# If the equilibrium branch material parameters are changed, you will need to \n",
+    "# generate new equilibrium branch data using code FV01.\n",
     "eq_data = np.genfromtxt('exp_data/eq_stretch_stress_data.csv', delimiter=',')\n",
-    "# ind2 = np.where(eq_data[0,:] >= 2.0)[0][0] \n",
     "\n",
     "fig = plt.figure() \n",
     "ax=fig.gca()  \n",
