--- a/_sources/06_Cahn_Hilliard/CH02_axi_ellipse_lithiation_slow_ramp_plotting_detail.ipynb
+++ b/_sources/06_Cahn_Hilliard/CH02_axi_ellipse_lithiation_slow_ramp_plotting_detail.ipynb
@@ -15,7 +15,11 @@
     "\n",
     "- Code for Cahn-Hilliard phase separation with mechanical coupling\n",
     "- This is a two-dimensional  axisymmetric simulation\n",
-    "- Slow ramp lithiation"
+    "- Slow ramp lithiation\n",
+    "\n",
+    "This code runs all three cases $E/E_0 = \\{1.0, 0.2, 0.1\\}$ of the slow-ramp lithiation study in series, and then reports the combined results plot. \n",
+    "\n",
+    "To run the individual studies for each value of $E/E_0$ and generate ParaView results files, see the directory ``06_Cahn_Hilliard/modulus_subcases`` in the GitHub repository."
    ]
   },
   {
