--- a/_sources/07_dielectric_elastomers/DE00_3D_pullin_instability.ipynb
+++ b/_sources/07_dielectric_elastomers/DE00_3D_pullin_instability.ipynb
@@ -25,7 +25,13 @@
     "- Electric potential: kV\n",
     "\n",
     "### Software:\n",
-    "- Dolfinx v0.8.0"
+    "- Dolfinx v0.8.0\n",
+    "\n",
+    "In the collection \"Example Codes for Coupled Theories in Solid Mechanics,\"\n",
+    "\n",
+    "By Eric M. Stewart, Shawn A. Chester, and Lallit Anand.\n",
+    "\n",
+    "https://solidmechanicscoupledtheories.github.io/"
    ]
   },
   {
@@ -37,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +208,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,17 +261,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define the boundary integration measure \"ds\" using the facet tags,\n",
     "# also specify the number of surface quadrature points.\n",
-    "ds = ufl.Measure('ds', domain=domain, subdomain_data=facet_tags, metadata={'quadrature_degree':4})\n",
+    "ds = ufl.Measure('ds', domain=domain, subdomain_data=facet_tags, metadata={'quadrature_degree':2})\n",
     "\n",
     "# Define the volume integration measure \"dx\" \n",
     "# also specify the number of volume quadrature points.\n",
-    "dx = ufl.Measure('dx', domain=domain, metadata={'quadrature_degree': 4})\n",
+    "dx = ufl.Measure('dx', domain=domain, metadata={'quadrature_degree': 2})\n",
     "\n",
     "# Create facet to cell connectivity required to determine boundary facets.\n",
     "domain.topology.create_connectivity(domain.topology.dim, domain.topology.dim)\n",
@@ -285,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,12 +389,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Initial conditions\n",
+    "\n",
+    "- The initial conditions for degrees of freedom $\\mathbf{u}$, $p$, and $\\phi$ are zero everywhere\n",
+    "- These are imposed automatically, since we have not specified any non-zero initial conditions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Subroutines for kinematics and constitutive equations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -638,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,14 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1033,7 +1042,7 @@
       "-----------------------------------------\n",
       "End computation\n",
       "------------------------------------------\n",
-      "Elapsed real time:  0:00:00.413942\n",
+      "Elapsed real time:  0:00:00.339571\n",
       "------------------------------------------\n"
      ]
     }
@@ -1124,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
