--- a/_sources/07_dielectric_elastomers/DE01_2D_axi_pullin_instability.ipynb
+++ b/_sources/07_dielectric_elastomers/DE01_2D_axi_pullin_instability.ipynb
@@ -24,7 +24,14 @@
     "- Electric potential: kV\n",
     "\n",
     "### Software:\n",
-    "- Dolfinx v0.8.0"
+    "- Dolfinx v0.8.0\n",
+    "\n",
+    "\n",
+    "In the collection \"Example Codes for Coupled Theories in Solid Mechanics,\"\n",
+    "\n",
+    "By Eric M. Stewart, Shawn A. Chester, and Lallit Anand.\n",
+    "\n",
+    "https://solidmechanicscoupledtheories.github.io/"
    ]
   },
   {
@@ -378,6 +385,16 @@
     "\n",
     "# Define trial functions needed for automatic differentiation\n",
     "dw = TrialFunction(ME)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Initial conditions\n",
+    "\n",
+    "- The initial conditions for degrees of freedom $\\mathbf{u}$, $p$, and $\\phi$ are zero everywhere\n",
+    "- These are imposed automatically, since we have not specified any non-zero initial conditions."
    ]
   },
   {
@@ -973,7 +990,7 @@
       "-----------------------------------------\n",
       "End computation\n",
       "------------------------------------------\n",
-      "Elapsed real time:  0:00:00.836285\n",
+      "Elapsed real time:  0:00:00.841694\n",
       "------------------------------------------\n"
      ]
     }
