--- a/_sources/08_dielectric_viscoelastomers/DV07_3D_cylinder_buckle.ipynb
+++ b/_sources/08_dielectric_viscoelastomers/DV07_3D_cylinder_buckle.ipynb
@@ -27,7 +27,14 @@
     "- Electric potential: kV\n",
     "\n",
     "### Software:\n",
-    "- Dolfinx v0.8.0"
+    "- Dolfinx v0.8.0\n",
+    "\n",
+    "\n",
+    "In the collection \"Example Codes for Coupled Theories in Solid Mechanics,\"\n",
+    "\n",
+    "By Eric M. Stewart, Shawn A. Chester, and Lallit Anand.\n",
+    "\n",
+    "https://solidmechanicscoupledtheories.github.io/"
    ]
   },
   {
@@ -39,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +248,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,9 +475,26 @@
     "# Functions for storing the velocity and acceleration at prev. step\n",
     "v_old = Function(V2)\n",
     "a_old = Function(V2)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Initial conditions\n",
     "\n",
-    "# Initial conditions: \n",
-    "\n",
+    "- The initial conditions for degrees of freedom $\\mathbf{u}$,  $\\mathbf{v}$, $\\mathbf{a}$, $p$, and $\\phi$ are zero everywhere\n",
+    "- These are imposed automatically, since we have not specified any non-zero initial conditions.\n",
+    "- We do, however, need to impose the initial condition that $\\mathbf{C}^v = \\mathbf{1}$. This is done below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# A function for constructing the identity matrix.\n",
     "#\n",
     "# To use the interpolate() feature, this must be defined as a \n",
@@ -498,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -737,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -794,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -822,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -888,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -900,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -922,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -969,9 +993,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "libffcx_forms_e634b2a4a7f97c94764f6d2cba174bdebb9d80d2.c: In function ‘tabulate_tensor_integral_0f3ee9468f24d85cc0668b7ee7b82ef0059757e8’:\n",
+      "libffcx_forms_e634b2a4a7f97c94764f6d2cba174bdebb9d80d2.c:1112:6: note: variable tracking size limit exceeded with ‘-fvar-tracking-assignments’, retrying without\n",
+      " 1112 | void tabulate_tensor_integral_0f3ee9468f24d85cc0668b7ee7b82ef0059757e8(double* restrict A,\n",
+      "      |      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n"
+     ]
+    }
+   ],
    "source": [
     "# Set up nonlinear problem\n",
     "problem = NonlinearProblem(Res, w, bcs, a)\n",
@@ -1004,7 +1039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1617,7 +1652,7 @@
       "-----------------------------------------\n",
       "End computation\n",
       "------------------------------------------\n",
-      "Elapsed real time:  0:16:56.158442\n",
+      "Elapsed real time:  0:16:31.614761\n",
       "------------------------------------------\n"
      ]
     }
@@ -1741,20 +1776,6 @@
     "print(\"Elapsed real time:  {}\".format(elapseTime))\n",
     "print(\"------------------------------------------\")\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Plot results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
